# Backend

./: .gitignore  .gitmodules  CMakeLists.txt  CMakelists.txt  README.md  dependencies.txt  readme.md  setup_project_attempt.sh
.cache/clangd/index/: box.cpp.782D2E9702C103A2.idx  box.hpp.9278C26EE0D9FFBC.idx  code.cpp.7504460E32B69179.idx  code.hpp.799E75DAA12FF9AD.idx  lexer.cpp.BDA5DBC001B0291C.idx  lexer.hpp.3E4C649882386264.idx  main.cpp.059539370028CBED.idx  parser.cpp.DBEF36ED1D97EDE0.idx  parser.hpp.4B1884DCE9692ECA.idx  shelf_bounds.cpp.1B91625B1DACA911.idx  shelf_bounds.hpp.B7925249C6F53269.idx  vec.hpp.BB225B295E7E9E6C.idx
marco/: Module.hpp  Vec.hpp
marco/modules/aruco/: Aruco.cpp  Aruco.hpp  Code.cpp  Code.hpp  Shelf_Bounds.cpp  Shelf_Bounds.hpp
marco/modules/face/: Face_Recognition.cpp  Face_Recognition.hpp
nimul/READ/: jetson_setup.md  testattempt.txt
nimul/include/: MedicineAI_CUDA.hpp
oldmakelists/marco/: CMakeLists.txt
oldmakelists/nimul/: CMakeLists.txt
src/: Interpreters.cpp  Module.cpp  Module.hpp  Module_Registry.cpp  Module_Registry.hpp  ShelfDatabase.cpp  ShelfDatabase.hpp  box.cpp  box.hpp  code.cpp  code.hpp  interpreters.cpp  interpreters.hpp  main.cpp  main.hpp  shelf_bounds.cpp  shelf_bounds.hpp
src/mlayout/: Lexer.cpp  Parser.cpp  Parser.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
src/models/: BoxEntry.cpp  BoxEntry.hpp  PillEntry.hpp  ShelfEntry.cpp  ShelfEntry.hpp
src/modules/aruco/: Aruco.cpp  Aruco.hpp
src/modules/audit_log/: AuditLog.cpp  AuditLog.hpp
src/modules/face/: Face_Recognition.cpp  Face_Recognition.hpp
src/modules/kiosk_comms/: KioskEventHandler.cpp  KioskEventHandler.hpp
src/modules/medical_ai/: Integration.cpp  MedicineAI.cpp  MedicineAI.hpp  MedicineAI_CUDA.cu  MedicineAI_CUDA.hpp  MedicineAI_C_API.cpp  api_functions.md
src/modules/pill_detect/: PillDetector.cpp  PillDetector.hpp
src/modules/rest_handler/: RestHandler.cpp  RestHandler.hpp
src/modules/shelf_recognition/: GeomUtils.cpp  GeomUtils.hpp  ShelfRecognition.cpp  ShelfRecognition.hpp
